<resources>
    <string name="app_name">WeatherSeer</string>
    <string name="appid">21c5d48b8f5a5f7d5a438d98819ab5a0</string>
    <string name="units">imperial</string>
    <string name="currentScreen">first_screen</string>
    <string name="forecastScreen">forecast_screen</string>
    <string name="channelId">weatherChannel</string>
    <string name="channelName">Weather Notifications</string>
    <string name="channelDesc">Current Weather</string>

    <string name="defaultZip">55155</string>
    <string name="search">16-Day</string>
    <string name="back">Back</string>
    <string name="locationIcon">Location</string>
    <string name="forecastTitle">16-Day Weather Forecast</string>

    <string name="errMessage">Couldn\'t find what you were looking for.</string>
    <string name="toastLength">Zipcode cannot be more than 5 digits</string>
    <string name="toastInvalid">Zipcode Not Found</string>
    <string name="alertTitle">Zipcode Not Found</string>
    <string name="alertMessage">Sorry, the zipcode you entered was not found.</string>
    <string name="alertOk">Ok</string>
    <string name="alertCancel">Cancel</string>
    <string name="rationaleTitle">Please Allow Permission for Location and Notification</string>
    <string name="rationaleMessage">Location and Notification permissions are needed in order to find the weather for your current location. In order to use this service, please enable them here or in your settings.</string>

    <string name="comma">," "</string>
    <string name="degree">°</string>
    <string name="percent">%" "</string>
    <string name="slash">/" "</string>
    <string name="hPa">" "hPa</string>
    <string name="feelsTemp">Feels like" "</string>
    <string name="low">Low" "</string>
    <string name="high">High" "</string>
    <string name="humidity">Humidity" "</string>
    <string name="pressure">Pressure" "</string>

    <string name="crystalBall">Crystal Ball</string>
    <string name="sunny">Sunny</string>
    <string name="fewclouds">Few Clouds</string>
    <string name="scatclouds">Scattered Clouds</string>
    <string name="brokenclouds">Broken Clouds</string>
    <string name="showerrain">Shower Rain</string>
    <string name="rain">Rain</string>
    <string name="storm">Storm</string>
    <string name="snow">Snow</string>
    <string name="mist">Mist</string>

    <string name="cityName">cityName</string>
    <string name="countryName">countryName</string>
    <string name="desc">desc</string>
    <string name="icon">icon</string>
    <string name="temp">temp</string>
</resources>