...
            },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
            modifier = Modifier
                .height(50.dp)
                .width(210.dp)
                .padding(horizontal = 20.dp)
                .testTag("textField"),
            colors = TextFieldDefaults.colors().copy(focusedContainerColor = Color.White),
            shape = RoundedCornerShape(12.dp)
        )
        Button(
            onClick = {
                if (hasLocation.value) {
...
